MiniJava.output
State 51 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ClassDeclp

    2 ClassDeclp: ClassDecl
    3           | ClassDeclp ClassDecl

    4 ClassDecl: KW_CLASS IDENT ExtendsFrom '{' VarDecls MethodDecls '}'

    5 ExtendsFrom: %empty
    6            | KW_EXTENDS IDENT

    7 VarDecls: VarDecls VarDecl
    8         | %empty

    9 VarDecl: Type IDENT ';'
   10        | KW_STATIC Type IDENT ';'

   11 MethodDecls: %empty
   12            | MethodDecls MethodDecl

   13 MethodDecl: KW_PUBLIC Type MethodSignature '{' VarDecls Statements KW_RETURN Expression ';' '}'

   14 MethodSignature: IDENT '(' MethodParams ')'

   15 MethodParams: %empty
   16             | ListParam

   17 ListParam: SingleParam
   18          | SingleParam ',' ListParam

   19 SingleParam: Type IDENT

   20 Type: Type '[' ']'
   21     | KW_BOOLEAN
   22     | KW_STRING
   23     | KW_FLOAT
   24     | KW_INT
   25     | IDENT

   26 Statements: Statementp
   27           | %empty

   28 Statementp: Statementp Statement
   29           | Statement

   30 Statement: '{' Statements '}'
   31          | KW_IF '(' Expression ')' Statement
   32          | KW_IF '(' Expression ')' Statement KW_ELSE Statement
   33          | KW_WHILE '(' Expression ')' Statement
   34          | KW_PRINTLN '(' Expression ')' ';'
   35          | ArrayAccess OP_ASSIGN Expression ';'
   36          | IDENT OP_ASSIGN Expression ';'
   37          | KW_BREAK ';'
   38          | KW_CONTINUE ';'
   39          | KW_SWITCH '(' Expression ')' '{' Cases KW_DEFAULT ':' Statementp '}'

   40 Cases: Cases Case
   41      | %empty

   42 Case: KW_CASE INT_LITERAL ':' Statementp

   43 Expression: Expression OP_OR Expression
   44           | Expression OP_AND Expression
   45           | Expression CMP_EQ Expression
   46           | Expression CMP_NEQ Expression
   47           | Expression CMP_GT Expression
   48           | Expression CMP_GTE Expression
   49           | Expression CMP_LT Expression
   50           | Expression CMP_LTE Expression
   51           | Expression OP_ADD Expression
   52           | Expression OP_MINUS Expression
   53           | Expression OP_MULT Expression
   54           | Expression OP_DIV Expression
   55           | Expression OP_MOD Expression
   56           | '-' Expression
   57           | OP_NOT Expression
   58           | ArrayAccess
   59           | LengthAccess
   60           | Expression '.' Funcall
   61           | INT_LITERAL
   62           | FLOAT_LITERAL
   63           | STRING_LITERAL
   64           | KW_NULL
   65           | KW_TRUE
   66           | KW_FALSE
   67           | IDENT
   68           | KW_THIS
   69           | KW_NEW Type '[' Expression ']'
   70           | KW_NEW IDENT '(' ')'
   71           | '(' Expression ')'

   72 LengthAccess: Expression '.' "length"

   73 ArrayAccess: IDENT '[' Expression ']'

   74 Funcall: IDENT '(' ParamList ')'

   75 ParamList: %empty
   76          | ParamList ',' Expression
   77          | Expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 14 31 32 33 34 39 70 71 74
')' (41) 14 31 32 33 34 39 70 71 74
',' (44) 18 76
'-' (45) 56
'.' (46) 60 72
':' (58) 39 42
';' (59) 9 10 13 34 35 36 37 38
'[' (91) 20 69 73
']' (93) 20 69 73
'{' (123) 4 13 30 39
'}' (125) 4 13 30 39
error (256)
KW_CLASS (258) 4
KW_EXTENDS (259) 6
KW_PUBLIC (260) 13
KW_STATIC (261) 10
KW_BOOLEAN (262) 21
KW_STRING (263) 22
KW_FLOAT (264) 23
KW_INT (265) 24
KW_IF (266) 31 32
KW_WHILE (267) 33
KW_BREAK (268) 37
KW_CONTINUE (269) 38
KW_SWITCH (270) 39
KW_CASE (271) 42
KW_DEFAULT (272) 39
KW_RETURN (273) 13
KW_NEW (274) 69 70
KW_THIS (275) 68
KW_NULL (276) 64
KW_TRUE (277) 65
KW_FALSE (278) 66
KW_PRINTLN (279) 34
IDENT (280) 4 6 9 10 14 19 25 36 67 70 73 74
INT_LITERAL (281) 42 61
FLOAT_LITERAL (282) 62
STRING_LITERAL (283) 63
"THEN" (284)
KW_ELSE (285) 32
OP_ASSIGN (286) 35 36
OP_OR (287) 43
OP_AND (288) 44
CMP_EQ (289) 45
CMP_NEQ (290) 46
CMP_GT (291) 47
CMP_LT (292) 49
CMP_GTE (293) 48
CMP_LTE (294) 50
OP_ADD (295) 51
OP_MINUS (296) 52
OP_MULT (297) 53
OP_DIV (298) 54
OP_MOD (299) 55
OP_NOT (300) 57
OP_UNARY (301)
"length" (302) 72


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
Program (60)
    on left: 1, on right: 0
ClassDeclp (61)
    on left: 2 3, on right: 1 3
ClassDecl (62)
    on left: 4, on right: 2 3
ExtendsFrom (63)
    on left: 5 6, on right: 4
VarDecls (64)
    on left: 7 8, on right: 4 7 13
VarDecl (65)
    on left: 9 10, on right: 7
MethodDecls (66)
    on left: 11 12, on right: 4 12
MethodDecl (67)
    on left: 13, on right: 12
MethodSignature (68)
    on left: 14, on right: 13
MethodParams (69)
    on left: 15 16, on right: 14
ListParam (70)
    on left: 17 18, on right: 16 18
SingleParam (71)
    on left: 19, on right: 17 18
Type (72)
    on left: 20 21 22 23 24 25, on right: 9 10 13 19 20 69
Statements (73)
    on left: 26 27, on right: 13 30
Statementp (74)
    on left: 28 29, on right: 26 28 39 42
Statement (75)
    on left: 30 31 32 33 34 35 36 37 38 39, on right: 28 29 31 32 33
Cases (76)
    on left: 40 41, on right: 39 40
Case (77)
    on left: 42, on right: 40
Expression (78)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67 68 69 70 71, on right: 13 31 32 33 34 35 36
    39 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 60 69 71 72 73
    76 77
LengthAccess (79)
    on left: 72, on right: 59
ArrayAccess (80)
    on left: 73, on right: 35 58
Funcall (81)
    on left: 74, on right: 60
ParamList (82)
    on left: 75 76 77, on right: 74 76


State 0

    0 $accept: . Program $end

    KW_CLASS  shift, and go to state 1

    Program     go to state 2
    ClassDeclp  go to state 3
    ClassDecl   go to state 4


State 1

    4 ClassDecl: KW_CLASS . IDENT ExtendsFrom '{' VarDecls MethodDecls '}'

    IDENT  shift, and go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: ClassDeclp .
    3 ClassDeclp: ClassDeclp . ClassDecl

    KW_CLASS  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 7


State 4

    2 ClassDeclp: ClassDecl .

    $default  reduce using rule 2 (ClassDeclp)


State 5

    4 ClassDecl: KW_CLASS IDENT . ExtendsFrom '{' VarDecls MethodDecls '}'

    KW_EXTENDS  shift, and go to state 8

    $default  reduce using rule 5 (ExtendsFrom)

    ExtendsFrom  go to state 9


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    3 ClassDeclp: ClassDeclp ClassDecl .

    $default  reduce using rule 3 (ClassDeclp)


State 8

    6 ExtendsFrom: KW_EXTENDS . IDENT

    IDENT  shift, and go to state 10


State 9

    4 ClassDecl: KW_CLASS IDENT ExtendsFrom . '{' VarDecls MethodDecls '}'

    '{'  shift, and go to state 11


State 10

    6 ExtendsFrom: KW_EXTENDS IDENT .

    $default  reduce using rule 6 (ExtendsFrom)


State 11

    4 ClassDecl: KW_CLASS IDENT ExtendsFrom '{' . VarDecls MethodDecls '}'

    $default  reduce using rule 8 (VarDecls)

    VarDecls  go to state 12


State 12

    4 ClassDecl: KW_CLASS IDENT ExtendsFrom '{' VarDecls . MethodDecls '}'
    7 VarDecls: VarDecls . VarDecl

    KW_STATIC   shift, and go to state 13
    KW_BOOLEAN  shift, and go to state 14
    KW_STRING   shift, and go to state 15
    KW_FLOAT    shift, and go to state 16
    KW_INT      shift, and go to state 17
    IDENT       shift, and go to state 18

    $default  reduce using rule 11 (MethodDecls)

    VarDecl      go to state 19
    MethodDecls  go to state 20
    Type         go to state 21


State 13

   10 VarDecl: KW_STATIC . Type IDENT ';'

    KW_BOOLEAN  shift, and go to state 14
    KW_STRING   shift, and go to state 15
    KW_FLOAT    shift, and go to state 16
    KW_INT      shift, and go to state 17
    IDENT       shift, and go to state 18

    Type  go to state 22


State 14

   21 Type: KW_BOOLEAN .

    $default  reduce using rule 21 (Type)


State 15

   22 Type: KW_STRING .

    $default  reduce using rule 22 (Type)


State 16

   23 Type: KW_FLOAT .

    $default  reduce using rule 23 (Type)


State 17

   24 Type: KW_INT .

    $default  reduce using rule 24 (Type)


State 18

   25 Type: IDENT .

    $default  reduce using rule 25 (Type)


State 19

    7 VarDecls: VarDecls VarDecl .

    $default  reduce using rule 7 (VarDecls)


State 20

    4 ClassDecl: KW_CLASS IDENT ExtendsFrom '{' VarDecls MethodDecls . '}'
   12 MethodDecls: MethodDecls . MethodDecl

    KW_PUBLIC  shift, and go to state 23
    '}'        shift, and go to state 24

    MethodDecl  go to state 25


State 21

    9 VarDecl: Type . IDENT ';'
   20 Type: Type . '[' ']'

    IDENT  shift, and go to state 26
    '['    shift, and go to state 27


State 22

   10 VarDecl: KW_STATIC Type . IDENT ';'
   20 Type: Type . '[' ']'

    IDENT  shift, and go to state 28
    '['    shift, and go to state 27


State 23

   13 MethodDecl: KW_PUBLIC . Type MethodSignature '{' VarDecls Statements KW_RETURN Expression ';' '}'

    KW_BOOLEAN  shift, and go to state 14
    KW_STRING   shift, and go to state 15
    KW_FLOAT    shift, and go to state 16
    KW_INT      shift, and go to state 17
    IDENT       shift, and go to state 18

    Type  go to state 29


State 24

    4 ClassDecl: KW_CLASS IDENT ExtendsFrom '{' VarDecls MethodDecls '}' .

    $default  reduce using rule 4 (ClassDecl)


State 25

   12 MethodDecls: MethodDecls MethodDecl .

    $default  reduce using rule 12 (MethodDecls)


State 26

    9 VarDecl: Type IDENT . ';'

    ';'  shift, and go to state 30


State 27

   20 Type: Type '[' . ']'

    ']'  shift, and go to state 31


State 28

   10 VarDecl: KW_STATIC Type IDENT . ';'

    ';'  shift, and go to state 32


State 29

   13 MethodDecl: KW_PUBLIC Type . MethodSignature '{' VarDecls Statements KW_RETURN Expression ';' '}'
   20 Type: Type . '[' ']'

    IDENT  shift, and go to state 33
    '['    shift, and go to state 27

    MethodSignature  go to state 34


State 30

    9 VarDecl: Type IDENT ';' .

    $default  reduce using rule 9 (VarDecl)


State 31

   20 Type: Type '[' ']' .

    $default  reduce using rule 20 (Type)


State 32

   10 VarDecl: KW_STATIC Type IDENT ';' .

    $default  reduce using rule 10 (VarDecl)


State 33

   14 MethodSignature: IDENT . '(' MethodParams ')'

    '('  shift, and go to state 35


State 34

   13 MethodDecl: KW_PUBLIC Type MethodSignature . '{' VarDecls Statements KW_RETURN Expression ';' '}'

    '{'  shift, and go to state 36


State 35

   14 MethodSignature: IDENT '(' . MethodParams ')'

    KW_BOOLEAN  shift, and go to state 14
    KW_STRING   shift, and go to state 15
    KW_FLOAT    shift, and go to state 16
    KW_INT      shift, and go to state 17
    IDENT       shift, and go to state 18

    $default  reduce using rule 15 (MethodParams)

    MethodParams  go to state 37
    ListParam     go to state 38
    SingleParam   go to state 39
    Type          go to state 40


State 36

   13 MethodDecl: KW_PUBLIC Type MethodSignature '{' . VarDecls Statements KW_RETURN Expression ';' '}'

    $default  reduce using rule 8 (VarDecls)

    VarDecls  go to state 41


State 37

   14 MethodSignature: IDENT '(' MethodParams . ')'

    ')'  shift, and go to state 42


State 38

   16 MethodParams: ListParam .

    $default  reduce using rule 16 (MethodParams)


State 39

   17 ListParam: SingleParam .
   18          | SingleParam . ',' ListParam

    ','  shift, and go to state 43

    $default  reduce using rule 17 (ListParam)


State 40

   19 SingleParam: Type . IDENT
   20 Type: Type . '[' ']'

    IDENT  shift, and go to state 44
    '['    shift, and go to state 27


State 41

    7 VarDecls: VarDecls . VarDecl
   13 MethodDecl: KW_PUBLIC Type MethodSignature '{' VarDecls . Statements KW_RETURN Expression ';' '}'

    KW_STATIC    shift, and go to state 13
    KW_BOOLEAN   shift, and go to state 14
    KW_STRING    shift, and go to state 15
    KW_FLOAT     shift, and go to state 16
    KW_INT       shift, and go to state 17
    KW_IF        shift, and go to state 45
    KW_WHILE     shift, and go to state 46
    KW_BREAK     shift, and go to state 47
    KW_CONTINUE  shift, and go to state 48
    KW_SWITCH    shift, and go to state 49
    KW_PRINTLN   shift, and go to state 50
    IDENT        shift, and go to state 51
    '{'          shift, and go to state 52

    $default  reduce using rule 27 (Statements)

    VarDecl      go to state 19
    Type         go to state 21
    Statements   go to state 53
    Statementp   go to state 54
    Statement    go to state 55
    ArrayAccess  go to state 56


State 42

   14 MethodSignature: IDENT '(' MethodParams ')' .

    $default  reduce using rule 14 (MethodSignature)


State 43

   18 ListParam: SingleParam ',' . ListParam

    KW_BOOLEAN  shift, and go to state 14
    KW_STRING   shift, and go to state 15
    KW_FLOAT    shift, and go to state 16
    KW_INT      shift, and go to state 17
    IDENT       shift, and go to state 18

    ListParam    go to state 57
    SingleParam  go to state 39
    Type         go to state 40


State 44

   19 SingleParam: Type IDENT .

    $default  reduce using rule 19 (SingleParam)


State 45

   31 Statement: KW_IF . '(' Expression ')' Statement
   32          | KW_IF . '(' Expression ')' Statement KW_ELSE Statement

    '('  shift, and go to state 58


State 46

   33 Statement: KW_WHILE . '(' Expression ')' Statement

    '('  shift, and go to state 59


State 47

   37 Statement: KW_BREAK . ';'

    ';'  shift, and go to state 60


State 48

   38 Statement: KW_CONTINUE . ';'

    ';'  shift, and go to state 61


State 49

   39 Statement: KW_SWITCH . '(' Expression ')' '{' Cases KW_DEFAULT ':' Statementp '}'

    '('  shift, and go to state 62


State 50

   34 Statement: KW_PRINTLN . '(' Expression ')' ';'

    '('  shift, and go to state 63


State 51

   25 Type: IDENT .
   36 Statement: IDENT . OP_ASSIGN Expression ';'
   73 ArrayAccess: IDENT . '[' Expression ']'

    OP_ASSIGN  shift, and go to state 64
    '['        shift, and go to state 65

    '['       [reduce using rule 25 (Type)]
    $default  reduce using rule 25 (Type)


State 52

   30 Statement: '{' . Statements '}'

    KW_IF        shift, and go to state 45
    KW_WHILE     shift, and go to state 46
    KW_BREAK     shift, and go to state 47
    KW_CONTINUE  shift, and go to state 48
    KW_SWITCH    shift, and go to state 49
    KW_PRINTLN   shift, and go to state 50
    IDENT        shift, and go to state 66
    '{'          shift, and go to state 52

    $default  reduce using rule 27 (Statements)

    Statements   go to state 67
    Statementp   go to state 54
    Statement    go to state 55
    ArrayAccess  go to state 56


State 53

   13 MethodDecl: KW_PUBLIC Type MethodSignature '{' VarDecls Statements . KW_RETURN Expression ';' '}'

    KW_RETURN  shift, and go to state 68


State 54

   26 Statements: Statementp .
   28 Statementp: Statementp . Statement

    KW_IF        shift, and go to state 45
    KW_WHILE     shift, and go to state 46
    KW_BREAK     shift, and go to state 47
    KW_CONTINUE  shift, and go to state 48
    KW_SWITCH    shift, and go to state 49
    KW_PRINTLN   shift, and go to state 50
    IDENT        shift, and go to state 66
    '{'          shift, and go to state 52

    $default  reduce using rule 26 (Statements)

    Statement    go to state 69
    ArrayAccess  go to state 56


State 55

   29 Statementp: Statement .

    $default  reduce using rule 29 (Statementp)


State 56

   35 Statement: ArrayAccess . OP_ASSIGN Expression ';'

    OP_ASSIGN  shift, and go to state 70


State 57

   18 ListParam: SingleParam ',' ListParam .

    $default  reduce using rule 18 (ListParam)


State 58

   31 Statement: KW_IF '(' . Expression ')' Statement
   32          | KW_IF '(' . Expression ')' Statement KW_ELSE Statement

    KW_NEW          shift, and go to state 71
    KW_THIS         shift, and go to state 72
    KW_NULL         shift, and go to state 73
    KW_TRUE         shift, and go to state 74
    KW_FALSE        shift, and go to state 75
    IDENT           shift, and go to state 76
    INT_LITERAL     shift, and go to state 77
    FLOAT_LITERAL   shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    OP_NOT          shift, and go to state 80
    '('             shift, and go to state 81
    '-'             shift, and go to state 82

    Expression    go to state 83
    LengthAccess  go to state 84
    ArrayAccess   go to state 85


State 59

   33 Statement: KW_WHILE '(' . Expression ')' Statement

    KW_NEW          shift, and go to state 71
    KW_THIS         shift, and go to state 72
    KW_NULL         shift, and go to state 73
    KW_TRUE         shift, and go to state 74
    KW_FALSE        shift, and go to state 75
    IDENT           shift, and go to state 76
    INT_LITERAL     shift, and go to state 77
    FLOAT_LITERAL   shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    OP_NOT          shift, and go to state 80
    '('             shift, and go to state 81
    '-'             shift, and go to state 82

    Expression    go to state 86
    LengthAccess  go to state 84
    ArrayAccess   go to state 85


State 60

   37 Statement: KW_BREAK ';' .

    $default  reduce using rule 37 (Statement)


State 61

   38 Statement: KW_CONTINUE ';' .

    $default  reduce using rule 38 (Statement)


State 62

   39 Statement: KW_SWITCH '(' . Expression ')' '{' Cases KW_DEFAULT ':' Statementp '}'

    KW_NEW          shift, and go to state 71
    KW_THIS         shift, and go to state 72
    KW_NULL         shift, and go to state 73
    KW_TRUE         shift, and go to state 74
    KW_FALSE        shift, and go to state 75
    IDENT           shift, and go to state 76
    INT_LITERAL     shift, and go to state 77
    FLOAT_LITERAL   shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    OP_NOT          shift, and go to state 80
    '('             shift, and go to state 81
    '-'             shift, and go to state 82

    Expression    go to state 87
    LengthAccess  go to state 84
    ArrayAccess   go to state 85


State 63

   34 Statement: KW_PRINTLN '(' . Expression ')' ';'

    KW_NEW          shift, and go to state 71
    KW_THIS         shift, and go to state 72
    KW_NULL         shift, and go to state 73
    KW_TRUE         shift, and go to state 74
    KW_FALSE        shift, and go to state 75
    IDENT           shift, and go to state 76
    INT_LITERAL     shift, and go to state 77
    FLOAT_LITERAL   shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    OP_NOT          shift, and go to state 80
    '('             shift, and go to state 81
    '-'             shift, and go to state 82

    Expression    go to state 88
    LengthAccess  go to state 84
    ArrayAccess   go to state 85


State 64

   36 Statement: IDENT OP_ASSIGN . Expression ';'

    KW_NEW          shift, and go to state 71
    KW_THIS         shift, and go to state 72
    KW_NULL         shift, and go to state 73
    KW_TRUE         shift, and go to state 74
    KW_FALSE        shift, and go to state 75
    IDENT           shift, and go to state 76
    INT_LITERAL     shift, and go to state 77
    FLOAT_LITERAL   shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    OP_NOT          shift, and go to state 80
    '('             shift, and go to state 81
    '-'             shift, and go to state 82

    Expression    go to state 89
    LengthAccess  go to state 84
    ArrayAccess   go to state 85


State 65

   73 ArrayAccess: IDENT '[' . Expression ']'

    KW_NEW          shift, and go to state 71
    KW_THIS         shift, and go to state 72
    KW_NULL         shift, and go to state 73
    KW_TRUE         shift, and go to state 74
    KW_FALSE        shift, and go to state 75
    IDENT           shift, and go to state 76
    INT_LITERAL     shift, and go to state 77
    FLOAT_LITERAL   shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    OP_NOT          shift, and go to state 80
    '('             shift, and go to state 81
    '-'             shift, and go to state 82

    Expression    go to state 90
    LengthAccess  go to state 84
    ArrayAccess   go to state 85


State 66

   36 Statement: IDENT . OP_ASSIGN Expression ';'
   73 ArrayAccess: IDENT . '[' Expression ']'

    OP_ASSIGN  shift, and go to state 64
    '['        shift, and go to state 65


State 67

   30 Statement: '{' Statements . '}'

    '}'  shift, and go to state 91


State 68

   13 MethodDecl: KW_PUBLIC Type MethodSignature '{' VarDecls Statements KW_RETURN . Expression ';' '}'

    KW_NEW          shift, and go to state 71
    KW_THIS         shift, and go to state 72
    KW_NULL         shift, and go to state 73
    KW_TRUE         shift, and go to state 74
    KW_FALSE        shift, and go to state 75
    IDENT           shift, and go to state 76
    INT_LITERAL     shift, and go to state 77
    FLOAT_LITERAL   shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    OP_NOT          shift, and go to state 80
    '('             shift, and go to state 81
    '-'             shift, and go to state 82

    Expression    go to state 92
    LengthAccess  go to state 84
    ArrayAccess   go to state 85


State 69

   28 Statementp: Statementp Statement .

    $default  reduce using rule 28 (Statementp)


State 70

   35 Statement: ArrayAccess OP_ASSIGN . Expression ';'

    KW_NEW          shift, and go to state 71
    KW_THIS         shift, and go to state 72
    KW_NULL         shift, and go to state 73
    KW_TRUE         shift, and go to state 74
    KW_FALSE        shift, and go to state 75
    IDENT           shift, and go to state 76
    INT_LITERAL     shift, and go to state 77
    FLOAT_LITERAL   shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    OP_NOT          shift, and go to state 80
    '('             shift, and go to state 81
    '-'             shift, and go to state 82

    Expression    go to state 93
    LengthAccess  go to state 84
    ArrayAccess   go to state 85


State 71

   69 Expression: KW_NEW . Type '[' Expression ']'
   70           | KW_NEW . IDENT '(' ')'

    KW_BOOLEAN  shift, and go to state 14
    KW_STRING   shift, and go to state 15
    KW_FLOAT    shift, and go to state 16
    KW_INT      shift, and go to state 17
    IDENT       shift, and go to state 94

    Type  go to state 95


State 72

   68 Expression: KW_THIS .

    $default  reduce using rule 68 (Expression)


State 73

   64 Expression: KW_NULL .

    $default  reduce using rule 64 (Expression)


State 74

   65 Expression: KW_TRUE .

    $default  reduce using rule 65 (Expression)


State 75

   66 Expression: KW_FALSE .

    $default  reduce using rule 66 (Expression)


State 76

   67 Expression: IDENT .
   73 ArrayAccess: IDENT . '[' Expression ']'

    '['  shift, and go to state 65

    $default  reduce using rule 67 (Expression)


State 77

   61 Expression: INT_LITERAL .

    $default  reduce using rule 61 (Expression)


State 78

   62 Expression: FLOAT_LITERAL .

    $default  reduce using rule 62 (Expression)


State 79

   63 Expression: STRING_LITERAL .

    $default  reduce using rule 63 (Expression)


State 80

   57 Expression: OP_NOT . Expression

    KW_NEW          shift, and go to state 71
    KW_THIS         shift, and go to state 72
    KW_NULL         shift, and go to state 73
    KW_TRUE         shift, and go to state 74
    KW_FALSE        shift, and go to state 75
    IDENT           shift, and go to state 76
    INT_LITERAL     shift, and go to state 77
    FLOAT_LITERAL   shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    OP_NOT          shift, and go to state 80
    '('             shift, and go to state 81
    '-'             shift, and go to state 82

    Expression    go to state 96
    LengthAccess  go to state 84
    ArrayAccess   go to state 85


State 81

   71 Expression: '(' . Expression ')'

    KW_NEW          shift, and go to state 71
    KW_THIS         shift, and go to state 72
    KW_NULL         shift, and go to state 73
    KW_TRUE         shift, and go to state 74
    KW_FALSE        shift, and go to state 75
    IDENT           shift, and go to state 76
    INT_LITERAL     shift, and go to state 77
    FLOAT_LITERAL   shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    OP_NOT          shift, and go to state 80
    '('             shift, and go to state 81
    '-'             shift, and go to state 82

    Expression    go to state 97
    LengthAccess  go to state 84
    ArrayAccess   go to state 85


State 82

   56 Expression: '-' . Expression

    KW_NEW          shift, and go to state 71
    KW_THIS         shift, and go to state 72
    KW_NULL         shift, and go to state 73
    KW_TRUE         shift, and go to state 74
    KW_FALSE        shift, and go to state 75
    IDENT           shift, and go to state 76
    INT_LITERAL     shift, and go to state 77
    FLOAT_LITERAL   shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    OP_NOT          shift, and go to state 80
    '('             shift, and go to state 81
    '-'             shift, and go to state 82

    Expression    go to state 98
    LengthAccess  go to state 84
    ArrayAccess   go to state 85


State 83

   31 Statement: KW_IF '(' Expression . ')' Statement
   32          | KW_IF '(' Expression . ')' Statement KW_ELSE Statement
   43 Expression: Expression . OP_OR Expression
   44           | Expression . OP_AND Expression
   45           | Expression . CMP_EQ Expression
   46           | Expression . CMP_NEQ Expression
   47           | Expression . CMP_GT Expression
   48           | Expression . CMP_GTE Expression
   49           | Expression . CMP_LT Expression
   50           | Expression . CMP_LTE Expression
   51           | Expression . OP_ADD Expression
   52           | Expression . OP_MINUS Expression
   53           | Expression . OP_MULT Expression
   54           | Expression . OP_DIV Expression
   55           | Expression . OP_MOD Expression
   60           | Expression . '.' Funcall
   72 LengthAccess: Expression . '.' "length"

    OP_OR     shift, and go to state 99
    OP_AND    shift, and go to state 100
    CMP_EQ    shift, and go to state 101
    CMP_NEQ   shift, and go to state 102
    CMP_GT    shift, and go to state 103
    CMP_LT    shift, and go to state 104
    CMP_GTE   shift, and go to state 105
    CMP_LTE   shift, and go to state 106
    OP_ADD    shift, and go to state 107
    OP_MINUS  shift, and go to state 108
    OP_MULT   shift, and go to state 109
    OP_DIV    shift, and go to state 110
    OP_MOD    shift, and go to state 111
    '.'       shift, and go to state 112
    ')'       shift, and go to state 113


State 84

   59 Expression: LengthAccess .

    $default  reduce using rule 59 (Expression)


State 85

   58 Expression: ArrayAccess .

    $default  reduce using rule 58 (Expression)


State 86
